# fork-teloxide

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/teloxide/: Cargo.toml
crates/teloxide-core/: Cargo.toml  README.md  custom_v2.json  schema.ron
crates/teloxide-core/examples/: erased.rs  self_info.rs
crates/teloxide-core/src/: adaptors.rs  bot.rs  codegen.rs  errors.rs  lib.rs  local_macros.rs  net.rs  payloads.rs  prelude.rs  requests.rs  types.rs  util.rs
crates/teloxide-core/src/adaptors/: cache_me.rs  erased.rs  parse_mode.rs  throttle.rs  trace.rs
crates/teloxide-core/src/bot/: api.rs  download.rs
crates/teloxide-core/src/codegen/: convert.rs  patch.rs  schema.rs
crates/teloxide-core/src/net/: download.rs  request.rs  telegram_response.rs
crates/teloxide-core/src/payloads/: answer_guest_query.rs  approve_chat_join_request.rs  (+133 more)
crates/teloxide-macros/: Cargo.toml
crates/teloxide-macros/src/: attr.rs  bot_commands.rs  command.rs  command_attr.rs  command_enum.rs  error.rs  fields_parse.rs  lib.rs  rename_rules.rs  unzip.rs
crates/teloxide/examples/: admin.rs  buttons.rs  chat_member_updates.rs  command.rs  db_remember.rs  deep_linking.rs  dialogue.rs  dispatching_features.rs  heroku_ping_pong.rs  inline.rs  middlewares.rs  middlewares_fallible.rs  ngrok_ping_pong.rs  purchase.rs  shared_state.rs
crates/teloxide/src/: backoff.rs  dispatching.rs  error_handlers.rs  lib.rs  prelude.rs  stop.rs  update_listeners.rs
crates/teloxide/tests/: command.rs  postgres.rs  redis.rs  sqlite.rs
(+269 files in other folders)
